# trading_bot

./: .gitignore  Makefile  README.md  RULES.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/market_data/: app.py
src/market_data/extractor/: extract.py  yahoo.py
src/signal/: app.py  extractor.py  pipeline.py  signals.py
src/util/: file_io.py  serializer.py  storage.py  util.py
src/util/serializer/: base.py  json.py  parquet.py
src/util/storage/: base.py  local.py  s3.py  serializer.py
tests/: conftest.py
tests/data/: spy.csv
tests/market_data/: test_app.py
tests/market_data/data/equities/2026/03/15/TEST_UUID/: AAPL_TEST_UUID.parquet  AMZN_TEST_UUID.parquet  GOOGL_TEST_UUID.parquet  META_TEST_UUID.parquet  MSFT_TEST_UUID.parquet  NVDA_TEST_UUID.parquet  TSLA_TEST_UUID.parquet
tests/market_data/data/index/2026/03/15/TEST_UUID/: XLB_TEST_UUID.parquet  XLC_TEST_UUID.parquet  XLE_TEST_UUID.parquet  XLF_TEST_UUID.parquet  XLI_TEST_UUID.parquet  XLK_TEST_UUID.parquet  XLP_TEST_UUID.parquet  XLRE_TEST_UUID.parquet  XLU_TEST_UUID.parquet  XLV_TEST_UUID.parquet  XLY_TEST_UUID.parquet
tests/market_data/data/macro/2026/03/15/TEST_UUID/: SPY_TEST_UUID.parquet
tests/signal/: test_signal_app.py
tests/util/: test_util.py
tests/util/serializer/: test_json.py  test_parquet.py
tests/util/storage/: test_serializer.py  test_storage.py
