[project]
name = "trading_bot"
version = "0.1.0"
description = "Trading bot"
requires-python = ">=3.11"

dependencies = [
    "yfinance",
    "pandas",
    "numpy",
    "ib-insync",
    "asyncio",
    "scikit-learn",
    "freezegun",
    "pyarrow",
    "boto3",
    "moto",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"